# solo

./: .gitignore  CMakeLists.Demos.txt  CMakeLists.Solo.txt  CMakeLists.Soloist.txt  CMakeLists.Solr.txt  CMakeLists.txt  CONTEXT.md  LICENSE  README.md  README.txt  TODO.txt  Vendor.Lua.cmake.txt  Vendor.cmake.txt
src/demos/: AssetCache.lua  Axes.lua  CMakeLists.txt  CheckerBox.lua  Demo.lua  Demo1.Entry.lua  Demo1.OpenGL.lua  Demo1.Vulkan.lua  Demo1.lua  Demo2.Entry.lua  Demo2.OpenGL.lua  Demo2.Vulkan.lua  Demo2.lua  Demo3.Entry.lua  Demo3.OpenGL.lua  Demo3.Vulkan.lua  Demo3.lua  DynamicQuad.lua  Floor.lua  LoadedMesh.lua  LookAt.lua  MonitorQuad.lua  OffscreenCamera.lua  PostProcessor.lua  PostProcessorControlPanel.lua  Rotator.lua  Skybox.lua  Spawner.lua  Tags.lua  TimeLabel.lua  Tracer.lua  TransparentQuad.lua  asset-cache.lua  axes.lua  checker-box.lua  demo1.lua  demo1_gl.lua  demo1_vk.lua  demo2.lua  demo2_gl.lua  (+23 more)
src/demos/common/: AssetCache.lua  Axes.lua  CheckerBox.lua  Common.lua  Demo.lua  DemoBase.h  DynamicQuad.lua  EffectCache.lua  EscapeWatcher.h  Floor.lua  Layers.lua  LoadedMesh.lua  LookAt.lua  MainCamera.lua  MonitorQuad.lua  OffscreenCamera.lua  PostProcessor.lua  PostProcessorControlPanel.lua  PostProcessors.lua  Rotator.h  Rotator.lua  Screenshoter.h  Screenshoter.lua  Shaders.h  Skybox.lua  Spawner.lua  Tags.lua  TimeLabel.lua  Tracer.lua  TransparentQuad.lua  common.lua  lookat.lua  screenshoter.lua
src/demos/demo1/: Axes.lua  CheckerBox.lua  CurrentTimeText.h  Demo1.Entry.lua  Demo1.cpp  Demo1.init.lua  Demo1.lua  DynamicQuad.lua  DynamicQuadUpdater.h  DynamicQuadUpdater.lua  Effects.lua  Floor.lua  Highlighter.lua  LoadedMesh.lua  LookAt.h  MainCamera.lua  MonitorQuad.lua  MonkeyHead.lua  OffscreenCamera.lua  PostProcessor1.h  PostProcessor2.h  PostProcessorBase.h  PostProcessors.lua  RotatingMesh.lua  Rotator.h  Shaders.h  Shaders.lua  Skybox.cpp  Skybox.lua  SpawnedObject.h  SpawnedObject.lua  SpawnedObjectTargeter.h  SpawnedObjectTargeter.lua  Spawner.h  Spawner.lua  Targeter.h  TimeLabel.lua  TimeLabelUpdater.lua  TransparentQuad.lua  demo1.init.lua  (+7 more)
src/demos/demo2/: Demo2.Entry.lua  Demo2.cpp  Demo2.init.lua  Demo2.lua  PostProcessor1.h  PostProcessor2.h  Shaders.h  Skybox.lua  demo2.init.lua  demo2.lua
src/demos/demo3/: Demo3.cpp
src/demos/demo4/: Demo4.cpp
src/demos/demo5/: Demo5.cpp
src/demos/effects/: Checker.lua  Color.lua  Grayscale.lua  HorizontalBlur.lua  Saturate.lua  Skybox.lua  Stitches.lua  Texture.lua  TextureWithLighting.lua  VerticalBlur.lua  checker.lua  saturate.lua  shadow-depth-pass.lua  shadowed.lua  stitches.lua
src/demos/lua/: asset-cache.lua  axes.lua  checker-box.lua  demo1.lua  demo1_gl.lua  demo1_vk.lua  demo2.lua  demo2_gl.lua  demo2_vk.lua  dynamic-quad.lua  highlighter.lua  post-processor-control-panel.lua  post-processor.lua  skybox.lua  spawner.lua  tags.lua  tracer.lua
src/solo/: CMakeLists.txt  Solo.cpp  Solo.h  SoloAssetLoader.cpp  SoloAsyncHandle.h  SoloBase.cpp  SoloBoundingBox.cpp  SoloBoundingSphere.cpp  SoloBoxCollider.cpp  SoloBoxCollider.h  SoloCamera.cpp  SoloCamera.h  SoloCollider.h  SoloCommon.cpp  SoloCommon.h  SoloComponent.h  SoloCubeTexture.cpp  SoloCubeTexture.h  SoloDebugInterface.cpp  SoloDebugInterface.h  SoloDegree.cpp  SoloDegree.h  SoloDegrees.cpp  SoloDegrees.h  SoloDevice.cpp  SoloDevice.h  SoloDeviceSetup.h  SoloEffect.cpp  SoloEffect.h  SoloEnums.h  SoloFileSystem.cpp  SoloFileSystem.h  SoloFont.cpp  SoloFont.h  SoloFontMesh.cpp  SoloFontMesh.h  SoloFontRenderer.cpp  SoloFontRenderer.h  SoloFormatter.h  SoloFrameBuffer.cpp  (+83 more)
src/solo/bullet/: SoloBulletBoxCollider.cpp  SoloBulletBoxCollider.h  SoloBulletCollider.h  SoloBulletCommon.h  SoloBulletPhysics.cpp  SoloBulletPhysics.h  SoloBulletRigidBody.cpp  SoloBulletRigidBody.h  SoloBulletStaticMeshCollider.cpp  SoloBulletStaticMeshCollider.h
src/solo/gl/: SoloOpenGL.cpp  SoloOpenGL.h  SoloOpenGLCubeTexture.cpp  SoloOpenGLCubeTexture.h  SoloOpenGLDebugInterface.cpp  SoloOpenGLDebugInterface.h  SoloOpenGLDevice.cpp  SoloOpenGLDevice.h  SoloOpenGLEffect.cpp  SoloOpenGLEffect.h  SoloOpenGLFrameBuffer.cpp  SoloOpenGLFrameBuffer.h  SoloOpenGLMaterial.cpp  SoloOpenGLMaterial.h  SoloOpenGLMesh.cpp  SoloOpenGLMesh.h  SoloOpenGLPrefabShaders.cpp  SoloOpenGLPrefabShaders.h  SoloOpenGLRectTexture.cpp  SoloOpenGLRectTexture.h  SoloOpenGLRenderer.cpp  SoloOpenGLRenderer.h  SoloOpenGLSDLDevice.cpp  SoloOpenGLSDLDevice.h  SoloOpenGLTexture.cpp  SoloOpenGLTexture.h  SoloOpenGLTexture2d.cpp  SoloOpenGLTexture2d.h  SoloSDLOpenGLDevice.cpp  SoloSDLOpenGLDevice.h
src/solo/lua/: SoloLuaApi.cpp  SoloLuaCameraApi.cpp  SoloLuaCommon.h  SoloLuaDeviceApi.cpp  SoloLuaEnumsApi.cpp  SoloLuaFontApi.cpp  SoloLuaMaterialApi.cpp  SoloLuaMathApi.cpp  SoloLuaMeshApi.cpp  SoloLuaMiscApi.cpp  SoloLuaNodeComponentApi.cpp  SoloLuaPhysicsApi.cpp  SoloLuaScriptComponent.cpp  SoloLuaScriptComponent.h  SoloLuaScriptLibrary.cpp  SoloLuaScriptRuntime.cpp  SoloLuaScriptRuntime.h  SoloLuaTextureApi.cpp  SoloLuaTransformApi.cpp
src/solo/math/: SoloDegrees.cpp  SoloDegrees.h  SoloMath.h  SoloMatrix.cpp  SoloMatrix.h  SoloQuaternion.cpp  SoloQuaternion.h  SoloRadians.cpp  SoloRadians.h  SoloRay.cpp  SoloRay.h  SoloVector2.cpp  SoloVector2.h  SoloVector3.cpp  SoloVector3.h  SoloVector4.cpp  SoloVector4.h
src/solo/null/: SoloNullCubeTexture.h  SoloNullDevice.h  SoloNullEffect.h  SoloNullFileSystem.h  SoloNullFrameBuffer.h  SoloNullMaterial.h  SoloNullMesh.h  SoloNullRectTexture.h  SoloNullRenderer.h  SoloNullTexture.h  SoloNullTexture2d.h
src/solo/sdl/: SoloSDLDebugInterface.cpp  SoloSDLDebugInterface.h  SoloSDLDevice.cpp  SoloSDLDevice.h  SoloSDLInputMaps.h
src/solo/spirv-cross/: spirv_cross.cpp
src/solo/stb/: SoloSTBTextureData.cpp  SoloSTBTextureData.h  SoloSTBTrueTypeFont.cpp  SoloSTBTrueTypeFont.h  SoloStbCubeTextureData.cpp  SoloStbCubeTextureData.h  SoloStbRectTextureData.cpp  SoloStbRectTextureData.h  SoloStbTexture2dData.cpp  SoloStbTexture2dData.h  SoloStbTextureData.cpp  SoloStbTextureData.h  SoloStbTrueTypeFont.cpp  (+1 more)
src/solr/: CMakeLists.txt  Solr.cpp
(+1176 files in other folders)
